# AeroMRO-Demand-Forecaster

./: .env.example  .gitignore  Dockerfile  README.md  README_PENDING_ITEMS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
dashboard/: app.py
notebooks/: 01_etl.ipynb  03_evaluation.ipynb
src/aeromro_forecaster/: __init__.py  config.py
src/aeromro_forecaster/etl/: __init__.py  build_database.py
src/aeromro_forecaster/llm_agent/: __init__.py  agent.py  build_rag.py  tools.py
src/aeromro_forecaster/models/: __init__.py  data.py  evaluate_forecasts.py  metrics.py  train_baselines.py  train_lstm.py  train_xgboost.py
tests/: test_agent_tools.py  test_etl.py  test_metrics.py
